plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "7.0.0"
}

mainClassName = "com.calculusmaster.pokecord.Pokecord"

group 'com.calculusmaster'
version '1.0-BETA'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(19))
    }
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }

    maven {
        url "https://libraries.minecraft.net"
    }
}

dependencies {
    implementation 'net.dv8tion:JDA:5.0.0-beta.4'
    implementation 'org.mongodb:mongodb-driver-sync:4.8.2'
    implementation 'org.json:json:20220320'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.5'
    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.jooq:joor:0.9.14'
    implementation 'org.jooq:jool:0.9.14'
    implementation 'one.util:streamex:0.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
}